<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/address"
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:background="@drawable/text_field_location"
                android:hint="@string/enter_street_address"
                android:padding="10dp"
                android:textColor="@color/desc"
                android:textColorHint="@color/desc"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/locationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/location_button_selector" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/list_line_separator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:hint="@string/add_aditional_comments"
            android:padding="10dp"
            android:textColor="@color/desc"
            android:textColorHint="@color/desc"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/list_line_separator" />

        <RelativeLayout
            android:id="@+id/photoLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/addPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/add_photo_optional" />

            <ImageView
                android:id="@+id/photo_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/camera_icon" />

        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/list_line_separator" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:button="@drawable/check_box_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/anonymous"
                android:layout_alignBottom="@+id/anonymous"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/report_anonymously" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/list_line_separator" />

        <LinearLayout
            android:id="@+id/personalInfoLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:hint="@string/enter_first_name"
                android:padding="10dp"
                android:textColor="@color/desc"
                android:textColorHint="@color/desc"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/list_line_separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:hint="@string/enter_last_name"
                android:padding="10dp"
                android:textColor="@color/desc"
                android:textColorHint="@color/desc"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/list_line_separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/desc"
                android:textColorHint="@color/desc"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>